--- a/src/main/resources/templates/bienvenida.html
+++ b/src/main/resources/templates/bienvenida.html
@@ -8,7 +8,7 @@
 
 <h1 th:text="'Bienvenido, ' + ${nombre}"></h1>
 
-<p>Esta es tu página personal hecha con Java 🚀</p>
+<p>Si estas viendo esto esto es porque puedes ver 👁️👁️ 🚀</p>
 
 </body>
 </html>
