agrega foto personal

--- a/src/main/resources/templates/bienvenida.html
+++ b/src/main/resources/templates/bienvenida.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <title>Bienvenido</title>
 </head>
-<body>
+<body style="text-align:center; font-family:Arial;">
 
 <h1 th:text="'Bienvenido, ' + ${nombre}"></h1>
 
-<p>Si estas viendo esto esto es porque puedes ver 👁️👁️ 🚀</p>
+<!-- FOTO -->
+<img src="/img/zazu.jpg" alt="Mi foto" width="200" style="border-radius: 50%;">
+
+<p>Esta es mi página personal hecha con Java 🚀</p>
 
 </body>
 </html>
