agrega foto personal

--- a/src/main/resources/templates/bienvenida.html
+++ b/src/main/resources/templates/bienvenida.html
@@ -9,9 +9,9 @@
 <h1 th:text="'Bienvenido, ' + ${nombre}"></h1>
 
 <!-- FOTO -->
-<img src="/img/zazu.jpg" alt="Mi foto" width="200" style="border-radius: 50%;">
+<img src="/img/erick.jpeg" alt="Mi foto" width="200" style="border-radius: 50%;">
 
-<p>Esta es mi página personal hecha con Java 🚀</p>
+<p>Bien hecho hijo, la Caro te agradece 🚀</p>
 
 </body>
 </html>
